// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Language List Overlay renders correctly 1`] = `
"<div class=\\"ecl-language-list ecl-language-list--overlay\\">
  <div class=\\"ecl-language-list__container ecl-container\\">
    <div class=\\"ecl-row\\">
      <div
        class=\\"ecl-language-list__close ecl-col-12 ecl-col-lg-8 ecl-offset-lg-2\\"
      >
        <button
          class=\\"ecl-button ecl-button--ghost ecl-language-list__close-button\\"
          type=\\"submit\\"
        >
          <span class=\\"ecl-button__container\\">
            <span class=\\"ecl-button__label\\">Close</span>

            <svg
              class=\\"ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--after\\"
              focusable=\\"false\\"
              aria-hidden=\\"true\\"
            >
              <use xlink:href=\\"/static/icons.svg#ui--close\\"></use>
            </svg>
          </span>
        </button>
      </div>
      <div
        class=\\"ecl-language-list__title ecl-col-12 ecl-col-lg-8 ecl-offset-lg-2\\"
      >
        <svg
          class=\\"ecl-icon ecl-icon--m ecl-language-list__title-icon\\"
          focusable=\\"false\\"
          aria-hidden=\\"true\\"
        >
          <use xlink:href=\\"/static/icons.svg#general--generic-lang\\"></use>
        </svg>
        Select your language
      </div>
    </div>
    <div class=\\"ecl-row\\">
      <div
        class=\\"ecl-language-list__column ecl-col-12 ecl-col-lg-4 ecl-offset-lg-2\\"
      >
        <ul class=\\"ecl-language-list__list\\">
          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_bg\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">български</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_es\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">español</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_cs\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">čeština</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_da\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">dansk</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_de\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">Deutsch</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_et\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">eesti</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_el\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">ελληνικά</span>
            </a>
          </li>

          <li
            class=\\"ecl-language-list__item ecl-language-list__item--is-active\\"
          >
            <a
              href=\\"/example#language_en\\"
              class=\\"ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">English</span>
              &nbsp;

              <svg
                class=\\"ecl-icon ecl-icon--xs ecl-link__icon\\"
                focusable=\\"false\\"
                aria-hidden=\\"true\\"
              >
                <use xlink:href=\\"/static/icons.svg#ui--check\\"></use>
              </svg>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_fr\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">français</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_ga\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">Gaeilge</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_hr\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">hrvatski</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_it\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">italiano</span>
            </a>
          </li>
        </ul>
      </div>
      <div class=\\"ecl-language-list__column ecl-col-12 ecl-col-lg-4\\">
        <ul class=\\"ecl-language-list__list\\">
          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_lv\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">latviešu</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_lt\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">lietuvių</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_hu\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">magyar</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_mt\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">Malti</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_nl\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">Nederlands</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_pl\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">polski</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_pt\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">português</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_ro\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">română</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_sk\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">slovenčina</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_sl\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">slovenščina</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_fi\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">suomi</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_sv\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">svenska</span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`EC - Language List Splash renders correctly 1`] = `
"<div class=\\"ecl-language-list ecl-language-list--splash\\">
  <header class=\\"ecl-language-list__header\\">
    <img
      class=\\"ecl-language-list__logo\\"
      src=\\"/static/logo--mute.svg\\"
      alt=\\"European Commission logo\\"
    />
  </header>
  <div class=\\"ecl-language-list__container ecl-container\\">
    <div class=\\"ecl-row\\">
      <div
        class=\\"ecl-language-list__column ecl-col-12 ecl-col-lg-4 ecl-offset-lg-2\\"
      >
        <ul class=\\"ecl-language-list__list\\">
          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_bg\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">български</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_es\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">español</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_cs\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">čeština</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_da\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">dansk</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_de\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">Deutsch</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_et\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">eesti</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_el\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">ελληνικά</span>
            </a>
          </li>

          <li
            class=\\"ecl-language-list__item ecl-language-list__item--is-active\\"
          >
            <a
              href=\\"/example#language_en\\"
              class=\\"ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">English</span>
              &nbsp;

              <svg
                class=\\"ecl-icon ecl-icon--xs ecl-link__icon\\"
                focusable=\\"false\\"
                aria-hidden=\\"true\\"
              >
                <use xlink:href=\\"/static/icons.svg#ui--check\\"></use>
              </svg>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_fr\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">français</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_ga\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">Gaeilge</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_hr\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">hrvatski</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_it\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">italiano</span>
            </a>
          </li>
        </ul>
      </div>
      <div class=\\"ecl-language-list__column ecl-col-12 ecl-col-lg-4\\">
        <ul class=\\"ecl-language-list__list\\">
          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_lv\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">latviešu</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_lt\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">lietuvių</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_hu\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">magyar</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_mt\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">Malti</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_nl\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">Nederlands</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_pl\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">polski</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_pt\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">português</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_ro\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">română</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_sk\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">slovenčina</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_sl\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">slovenščina</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_fi\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">suomi</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example#language_sv\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
            >
              <span class=\\"ecl-link__label\\">svenska</span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
"
`;
